--- a/Appendices/Hypergraph.tex
+++ b/Appendices/Hypergraph.tex
@@ -2,7 +2,7 @@
 \documentclass[../Master.tex]{subfiles}
 \begin{document}
 
-\section{Hyper graph construction from state}
+\section{Learning from hypergraphs}
 	\subfile{\master/Appendices/Hypergraph/HyperGraphConstructionFromState}
 
 \section{Merging hypergraphs}\label{sec:C:HGMerging}
