--- a/Conditional.tex
+++ b/Conditional.tex
@@ -10,7 +10,7 @@
 \section{Hypothesis construction}
     \subfile{Conditional/HypothesisConstruction}
 
-\section{Optimisation: Hypergraph introduction}
+\section{Optimisation: Hypergraph introduction}\label{sec:ca:hgintro}
     \subfile{Conditional/ExplainOurModels}
 
 % \section{Hyper graph construction from state}
