--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -46,6 +46,7 @@ As the graph can be meaningfully partitioned into complete subgraphs, the vertic
 
 A hypergraph constructed from a set of connecting paths contains $O\left(|\mathcal{O}|^m\right)$ vertices and $O\left( |\mathcal{O}|^m\right)$ hyperedges, where $m$ is the maximum arity of predicates. 
 
+\subsubsection*{Learning with hypergraphs}
 A thorough explanation of learning conditional effects using hypergraphs is given in Appendix~\ref{sec:app:hypergraph}, and we will recount the most important findings here:
 
 Proven knowledge and candidates can be represented as pairs of vertices rather than sets of complete paths. As a vertex pair can represent several connecting paths, candidates can more easily be reduced to singleton sets. However, candidate sets can also be expanded, and as such knowledge is never decidedly proven to hold (although we still operate with singleton candidates as ``proven'' knowledge, for the sake of planning).
