--- a/NonConditional/Preconditions.tex
+++ b/NonConditional/Preconditions.tex
@@ -11,7 +11,17 @@
 
 We will now consider the problem of learning the preconditions of an action schema $A$.
 
-In~\cite{Walsh2008}, the authors suggest maintaining a set of all possible conjunctions of $k$ or less atoms (where $k$ is the maximal number of atoms allowed in action schema preconditions), and --- on action failure --- marking the conjunctions predicting that the action would have succeeded as disproven.
+In~\cite{Walsh2008}, the authors suggest maintaining a set of all possible conjunctions of $k$ or less atoms, and --- on action failure --- marking the conjunctions predicting that the action would have succeeded as disproven. For a single action schema, the number of ungrounded atoms in this set is then:
+\begin{equation*}
+    \sum_{i=1}^{|\lits|} {{|\lits|}\choose{i}} = O \left( 2^{|\lits|} \right)
+\end{equation*}
+To obtain polynomial space complexity, the authors suggest limiting the maximum number of atoms allowed in a precondition to a constant $k$, which yields a space complexity of 
+
+\begin{equation*}
+    \sum_{i=1}^{k} {{|\lits|}\choose{i}} = O \left( |\lits|^k \right)
+\end{equation*}
+
+In contrast, our proposed solution has a space complexity of $O \left( |\lits|^2 \right)$. 
 
 We propose a solution where individual atoms are proven and disproven to be preconditions based on the following observations:
 \begin{itemize}
