--- a/Introduction.tex
+++ b/Introduction.tex
@@ -7,7 +7,7 @@
 	
 	The first question we should ask ourselves is: How can we perform an experiment and know exactly what we have learned from it, 
 	and how can we use this knowledge to develop further experiments highlighting another aspect of the field we are trying to learn?
-	Both of these questions turns out to be very interesting when it comes to AI learning.
+	Both of these questions turns out to be crucial when it comes to AI learning.
 	
 	This means that research done on science and scientific understanding is equally relevant in the context of making an agent able to learn.
 	As some of these concepts are greater than we are able to cover in this thesis, we have decided to limit ourselves to just planning domains.	 
