--- a/Learning/introductionToLearning.tex
+++ b/Learning/introductionToLearning.tex
@@ -1,8 +1,7 @@
 \providecommand{\master}{..}
 \documentclass[\master/Master.tex]{subfiles}
 \begin{document}
-	
-	Learning is defined by the Oxford dictionary as 
+	In the Oxford dictionary learning is defined as
 	\begin{quote}
 		The acquisition of knowledge or skills through study, experience, or being taught.
 	\end{quote}
@@ -27,29 +26,6 @@ A natural question in this context is, why is it necessary to define approaches 
     Consider two programmers tasked with implementing a complicated animation. Both know the programming language $J$, but have no experience with graphics programming. Programmer $A$ implements the animation in language $J$, complementing his existing knowledge with books and tutorials only when in doubt. Programmer $B$ takes a different approach, trying out several different languages and methodologies before finally discovering that language $H$ is the most usable for his needs. By focusing his learning on the graphics element, $A$ is able to quickly and efficiently solve the task. $B$ has solved the task more elegantly, and has obtained knowledge which may be relevant in similar programming tasks, but has taken considerably longer.
 \end{example}
 
-% 	However we want to raise the question why is it necessary to define approaches to learning, is learning not a universal concept?
-% 	To which the answer is, the act of learning itself, i.e.\ the acquisition of knowledge, that remains the same no matter the approach.
-% 	But getting into a situation where new knowledge is available that is something where there exists multiple approaches, and without it no knowledge may be acquired.
-% 	
-% To examplify this, a pessimistic learner will learn how to solve a given task by improving his knowledge about tools he already knows and is comfortable with, while a more optimistically inclined learner might try out a number of different approaches before finally discovering a working technique. Even though the pessimist might have arrived at the solution faster, the optimist have had the chance to improve his understanding of a number of related fields, which may be applicable to similar problems in the future.
-%
-% 	\begin{example}
-% 		Imagine two people Alice and Bob, Alice is a personification of a pessimistic approach and Bob is of the optimistic approach.
-% 		
-% 		Alice is a quiet person that keeps to herself, when something unexpected happens she avoids it. 
-% 		Nothing exciting or good ever happens in her life time, but at the same time nothing bad ever happens either.
-% 		
-% 		Bob on the other hand is wild, he never stays at the same place for long and when he does he is barely at home. 
-% 		The number of jobs he has had is to many to list but suffice it to say he has pretty much tried everything.
-% 		Bobs life in contrast to Alice's has had many upsides and he has learned many great things that has improved him as a person,
-% 		however because he has the wild life style, many horrible things has happened as well, but even those horrible things has taught him some valuable lessons.
-% 		
-% 		As we can see from these examples Alice and Bob has a different approach to learning in life, but where Alice got stuck and never improved or became wiser, 
-% 		Bob on the other hand has improved many-fold. That is not to say that Bob's approach is inherently superior as he taken great risks to his well being, where as Alice has enjoyed a much safer life.
-% 		
-% 	\end{example}
-	
-	
 	These approaches are what~\cite{tobias1990a} defines as a Learning strategy:
 	
 \begin{quote}
@@ -63,9 +39,4 @@ A natural question in this context is, why is it necessary to define approaches 
 	The proven knowledge is knowledge that the agent has proven to be correct, disproved knowledge is knowledge which has been shown to be incorrect, and unproven knowledge is knowledge which has neither been proved nor has it been disproved.
 	In science the prevailing method for acquiring knowledge has been through what we know today as the scientific method. 
 	As such we propose that the scientific method is equally valid for acquiring of knowledge for an agent.
-	
-	
-	
-	
-	
 \end{document}
