--- a/Master.tex
+++ b/Master.tex
@@ -101,6 +101,7 @@
 \newcommand{\atoms}{\ensuremath{\mathbb{A}}\xspace}
 
 \newcommand{\lits}{\ensuremath{\mathbb{L}}\xspace}
+\newcommand{\litsa}{\ensuremath{\lits_A}\xspace}
 % Symbol for predicates
 \newcommand{\preds}{\ensuremath{\mathbb{P}}\xspace}
 % Symbol for goal
@@ -123,10 +124,9 @@
 % symbol for candidate
 \newcommand{\cand}{\ensuremath{c}\xspace}
 \newcommand{\Cand}{\ensuremath{C}\xspace}
+\newcommand{\cset}{\ensuremath{\mathcal{C}}\xspace}
 
 \newcommand{\objs}{\ensuremath{\mathcal{O}}\xspace}
-
-\newcommand{\cset}{\ensuremath{\mathcal{C}}\xspace}
 
 \newcommand{\ground}{\ensuremath{\textit{ground}}\xspace}
 
